# bazel-tsconfig-example

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
j/: BUILD.bazel  package.json  ts_module.ts  ts_program.ts  tsconfig.json
